--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,6 +4,7 @@
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
+    "lib": ["ES2021"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
