--- a/package.json
+++ b/package.json
@@ -27,8 +27,13 @@
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "npm-run-all": "^4.1.5",
+    "postcss-html": "^1.5.0",
     "prettier": "^2.8.8",
     "sass": "^1.63.4",
+    "stylelint": "^15.10.1",
+    "stylelint-config-recess-order": "^4.3.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard-scss": "^10.0.0",
     "typescript": "~5.0.4",
     "vite": "^4.3.9",
     "vue-tsc": "^1.6.5"
